k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golden-blog-service
  namespace: golden-blog
  labels:
    app.kubernetes.io/name: golden-blog-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: golden-blog-app
